homeassistant/music-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
  template:
    metadata:
      labels:
    spec:
      # music ist stored directly on nasbox filesystem
      nodeSelector:
        kubernetes.io/hostname: nasbox
      containers:
        - name: music-assistant
          image: ghcr.io/music-assistant/server
          ports:
            - name: web
              containerPort: 8095
            - name: devices
              containerPort: 8097
              hostPort: 8097
            - name: squeezelite
              containerPort: 3483
              hostPort: 3483
          volumeMounts:
            - name: data-storage
              mountPath: /data
            - name: music-storage
              mountPath: /music
              readOnly: true
          startupProbe:
            periodSeconds: 10
            failureThreshold: 6
            httpGet:
              port: web
              path: /info
          livenessProbe:
            httpGet:
              port: web
              path: /info
          readinessProbe:
            httpGet:
              port: web
              path: /info
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName:  music-assistant-server-pvc 
        - name: music-storage
          hostPath:
            path: /srv-ssd/music
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-server
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 8095
  selector:
